// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> disabled renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  disabled={true}
  forwardedRef={null}
  is={[Function]}
>
  Options
</StyledComponent>
`;

exports[`<Select /> readOnly renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is={[Function]}
  readOnly={true}
>
  Options
</StyledComponent>
`;

exports[`<Select /> renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is={[Function]}
>
  Options
</StyledComponent>
`;

exports[`<Select /> underline renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "error",
      "underline",
    ]
  }
  forwardedRef={null}
  is={[Function]}
  underline={true}
>
  Options
</StyledComponent>
`;
